Исправление пути иконок

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_icon">
-                            <img src="../src/icons/1reason.png" alt="">
+                            <img src="icons/1reason.png" alt="">
                         </div>
                          <div class="reasons_descr">
                             <div class="reasons_subtitle">Никаких наличных, оплата происходит
@@ -94,7 +94,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_icon">
-                            <img src="../src/icons/2reason.png" alt="">
+                            <img src="icons/2reason.png" alt="">
                         </div>
                          <div class="reasons_descr">
                             <div class="reasons_subtitle">Комиссия 8% + БОНУСЫ</div>
@@ -107,7 +107,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_icon">
-                            <img src="../src/icons/3reason.png" alt="">
+                            <img src="icons/3reason.png" alt="">
                         </div>
                          <div class="reasons_descr">
                             <div class="reasons_subtitle">Высокий доход с гарантированными
@@ -121,7 +121,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_icon">
-                            <img src="../src/icons/4reason.png" alt="">
+                            <img src="icons/4reason.png" alt="">
                         </div>
                          <div class="reasons_descr">
                             <div class="reasons_subtitle">Работа в удобное время, никаких графиков</div>
@@ -134,7 +134,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_icon">
-                            <img src="../src/icons/5reason.png" alt="">
+                            <img src="icons/5reason.png" alt="">
                         </div>
                          <div class="reasons_descr">
                             <div class="reasons_subtitle">Комфортное, прозрачное и простое
@@ -148,7 +148,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_icon">
-                            <img src="../src/icons/6reason.png" alt="">
+                            <img src="icons/6reason.png" alt="">
                         </div>
                          <div class="reasons_descr">
                             <div class="reasons_subtitle">Всегда большое количество заказов
@@ -162,7 +162,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_icon">
-                            <img src="../src/icons/7reason.png" alt="">
+                            <img src="icons/7reason.png" alt="">
                         </div>
                          <div class="reasons_descr">
                             <div class="reasons_subtitle">Круглосуточная поддержка</div>
@@ -175,7 +175,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_icon">
-                            <img src="../src/icons/8reason.png" alt="">
+                            <img src="icons/8reason.png" alt="">
                         </div>
                          <div class="reasons_descr">
                             <div class="reasons_subtitle">Без шашечек и наклеек</div>
@@ -242,7 +242,7 @@
             <div class="label label_white">Возможности</div>
             <h2 class="title">Выбор - отличная штука!</h2>
             <div class="subtitle">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
-            <img class="choice_img" src="/src/img/IMG_Car_UberX.png" alt="car">
+            <img class="choice_img" src="img/IMG_Car_UberX.png" alt="car">
             <div class="choice_descr">Машины на каждый день</br>Лучше, быстрее и дешевле, чем такси</div>       
         </div> 
     </section>
